# deepQ-learns-snake

./: .gitignore  README.md  pyproject.toml
model/: model.pth
snake/: agent.py  helper.py  snake_game_AI.py  snake_game_human.py
snake.egg-info/: PKG-INFO  SOURCES.txt
