[project]
name = "snake"
description = "Human-playable snake game and possibility to visualize a neural network learning to play snake using reinforcement learning."
version = "0.0.1"
authors = [{name = "William Norman", email = "vvilliamnorman@gmail.com"},]

[build-system]
requires = [
    "setuptools",
    "wheel"
]
build-backend = "setuptools.build_meta"

include = ["snake"]